vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

    /**
     * Create and initialize a libvlc instance.<br>
     * This functions accept a list of "command line" arguments similar to the<br>
     * main(). These arguments affect the LibVLC instance default configuration.<br>
     * \version<br>
     * Arguments are meant to be passed from the command line to LibVLC, just like<br>
     * VLC media player does. The list of valid arguments depends on the LibVLC<br>
     * version, the operating system and platform, and set of available LibVLC<br>
     * plugins. Invalid or unsupported arguments will cause the function to fail<br>
     * (i.e. return NULL). Also, some arguments may alter the behaviour or<br>
     * otherwise interfere with other LibVLC functions.<br>
     * \warning<br>
     * There is absolutely no warranty or promise of forward, backward and<br>
     * cross-platform compatibility with regards to libvlc_new() arguments.<br>
     * We recommend that you do not use them, other than when debugging.<br>
     * \param argc the number of arguments (should be 0)<br>
     * \param argv list of arguments (should be NULL)<br>
     * \return the libvlc instance or NULL in case of error<br>
     * Original signature : <code>libvlc_instance_t* libvlc_new(int, const const char**)</code><br>
     * <i>native declaration : line 212</i><br>
     * @deprecated use the safer methods {@link #libvlc_new(int, java.lang.String[])} and {@link #libvlc_new(int, com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    PointerByReference libvlc_new(int argc, PointerByReference argv);
    /**
     * Create and initialize a libvlc instance.<br>
     * This functions accept a list of "command line" arguments similar to the<br>
     * main(). These arguments affect the LibVLC instance default configuration.<br>
     * \version<br>
     * Arguments are meant to be passed from the command line to LibVLC, just like<br>
     * VLC media player does. The list of valid arguments depends on the LibVLC<br>
     * version, the operating system and platform, and set of available LibVLC<br>
     * plugins. Invalid or unsupported arguments will cause the function to fail<br>
     * (i.e. return NULL). Also, some arguments may alter the behaviour or<br>
     * otherwise interfere with other LibVLC functions.<br>
     * \warning<br>
     * There is absolutely no warranty or promise of forward, backward and<br>
     * cross-platform compatibility with regards to libvlc_new() arguments.<br>
     * We recommend that you do not use them, other than when debugging.<br>
     * \param argc the number of arguments (should be 0)<br>
     * \param argv list of arguments (should be NULL)<br>
     * \return the libvlc instance or NULL in case of error<br>
     * Original signature : <code>libvlc_instance_t* libvlc_new(int, const const char**)</code><br>
     * <i>native declaration : line 212</i>
     */
    PointerByReference libvlc_new(int argc, String argv[]);
    /**
     * Decrement the reference count of a libvlc instance, and destroy it<br>
     * if it reaches zero.<br>
     * \param p_instance the instance to destroy<br>
     * Original signature : <code>void libvlc_release(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 221</i><br>
     * @deprecated use the safer method {@link #libvlc_release(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_release(Pointer p_instance);
    /**
     * Decrement the reference count of a libvlc instance, and destroy it<br>
     * if it reaches zero.<br>
     * \param p_instance the instance to destroy<br>
     * Original signature : <code>void libvlc_release(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 221</i>
     */
    void libvlc_release(PointerByReference p_instance);
    /**
     * Increments the reference count of a libvlc instance.<br>
     * The initial reference count is 1 after libvlc_new() returns.<br>
     * \param p_instance the instance to reference<br>
     * Original signature : <code>void libvlc_retain(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 229</i><br>
     * @deprecated use the safer method {@link #libvlc_retain(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_retain(Pointer p_instance);
    /**
     * Increments the reference count of a libvlc instance.<br>
     * The initial reference count is 1 after libvlc_new() returns.<br>
     * \param p_instance the instance to reference<br>
     * Original signature : <code>void libvlc_retain(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 229</i>
     */
    void libvlc_retain(PointerByReference p_instance);
    /**
     * Try to start a user interface for the libvlc instance.<br>
     * \param p_instance the instance<br>
     * \param name interface name, or NULL for default<br>
     * \return 0 on success, -1 on error.<br>
     * Original signature : <code>int libvlc_add_intf(libvlc_instance_t*, const char*)</code><br>
     * <i>native declaration : line 239</i><br>
     * @deprecated use the safer methods {@link #libvlc_add_intf(com.sun.jna.ptr.PointerByReference, java.lang.String)} and {@link #libvlc_add_intf(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    int libvlc_add_intf(Pointer p_instance, Pointer name);
    /**
     * Try to start a user interface for the libvlc instance.<br>
     * \param p_instance the instance<br>
     * \param name interface name, or NULL for default<br>
     * \return 0 on success, -1 on error.<br>
     * Original signature : <code>int libvlc_add_intf(libvlc_instance_t*, const char*)</code><br>
     * <i>native declaration : line 239</i>
     */
    int libvlc_add_intf(PointerByReference p_instance, String name);
    /**
     * Try to start a user interface for the libvlc instance.<br>
     * \param p_instance the instance<br>
     * \param name interface name, or NULL for default<br>
     * \return 0 on success, -1 on error.<br>
     * Original signature : <code>int libvlc_add_intf(libvlc_instance_t*, const char*)</code><br>
     * <i>native declaration : line 239</i>
     */
    int libvlc_add_intf(PointerByReference p_instance, Pointer name);
    /**
     * Registers a callback for the LibVLC exit event. This is mostly useful if<br>
     * the VLC playlist and/or at least one interface are started with<br>
     * libvlc_playlist_play() or libvlc_add_intf() respectively.<br>
     * Typically, this function will wake up your application main loop (from<br>
     * another thread).<br>
     * \note This function should be called before the playlist or interface are<br>
     * started. Otherwise, there is a small race condition: the exit event could<br>
     * be raised before the handler is registered.<br>
     * \param p_instance LibVLC instance<br>
     * \param cb callback to invoke when LibVLC wants to exit,<br>
     *           or NULL to disable the exit handler (as by default)<br>
     * \param opaque data pointer for the callback<br>
     * \warning This function and libvlc_wait() cannot be used at the same time.<br>
     * Original signature : <code>void libvlc_set_exit_handler(libvlc_instance_t*, libvlc_set_exit_handler_cb_callback*, void*)</code><br>
     * <i>native declaration : line 259</i><br>
     * @deprecated use the safer method {@link #libvlc_set_exit_handler(com.sun.jna.ptr.PointerByReference, libvlc.LibvlcLibrary.libvlc_set_exit_handler_cb_callback, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_set_exit_handler(Pointer p_instance, LibvlcLibrary.libvlc_set_exit_handler_cb_callback cb, Pointer opaque);
    /**
     * Registers a callback for the LibVLC exit event. This is mostly useful if<br>
     * the VLC playlist and/or at least one interface are started with<br>
     * libvlc_playlist_play() or libvlc_add_intf() respectively.<br>
     * Typically, this function will wake up your application main loop (from<br>
     * another thread).<br>
     * \note This function should be called before the playlist or interface are<br>
     * started. Otherwise, there is a small race condition: the exit event could<br>
     * be raised before the handler is registered.<br>
     * \param p_instance LibVLC instance<br>
     * \param cb callback to invoke when LibVLC wants to exit,<br>
     *           or NULL to disable the exit handler (as by default)<br>
     * \param opaque data pointer for the callback<br>
     * \warning This function and libvlc_wait() cannot be used at the same time.<br>
     * Original signature : <code>void libvlc_set_exit_handler(libvlc_instance_t*, libvlc_set_exit_handler_cb_callback*, void*)</code><br>
     * <i>native declaration : line 259</i>
     */
    void libvlc_set_exit_handler(PointerByReference p_instance, LibvlcLibrary.libvlc_set_exit_handler_cb_callback cb, Pointer opaque);
    /**
     * Waits until an interface causes the instance to exit.<br>
     * You should start at least one interface first, using libvlc_add_intf().<br>
     * \param p_instance the instance<br>
     * \warning This function wastes one thread doing basically nothing.<br>
     * libvlc_set_exit_handler() should be used instead.<br>
     * Original signature : <code>void libvlc_wait(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 271</i><br>
     * @deprecated use the safer method {@link #libvlc_wait(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_wait(Pointer p_instance);
    /**
     * Waits until an interface causes the instance to exit.<br>
     * You should start at least one interface first, using libvlc_add_intf().<br>
     * \param p_instance the instance<br>
     * \warning This function wastes one thread doing basically nothing.<br>
     * libvlc_set_exit_handler() should be used instead.<br>
     * Original signature : <code>void libvlc_wait(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 271</i>
     */
    void libvlc_wait(PointerByReference p_instance);
    /**
     * Sets the application name. LibVLC passes this as the user agent string<br>
     * when a protocol requires it.<br>
     * \param p_instance LibVLC instance<br>
     * \param name human-readable application name, e.g. "FooBar player 1.2.3"<br>
     * \param http HTTP User Agent, e.g. "FooBar/1.2.3 Python/2.6.0"<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_set_user_agent(libvlc_instance_t*, const char*, const char*)</code><br>
     * <i>native declaration : line 283</i><br>
     * @deprecated use the safer methods {@link #libvlc_set_user_agent(com.sun.jna.ptr.PointerByReference, java.lang.String, java.lang.String)} and {@link #libvlc_set_user_agent(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_set_user_agent(Pointer p_instance, Pointer name, Pointer http);
    /**
     * Sets the application name. LibVLC passes this as the user agent string<br>
     * when a protocol requires it.<br>
     * \param p_instance LibVLC instance<br>
     * \param name human-readable application name, e.g. "FooBar player 1.2.3"<br>
     * \param http HTTP User Agent, e.g. "FooBar/1.2.3 Python/2.6.0"<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_set_user_agent(libvlc_instance_t*, const char*, const char*)</code><br>
     * <i>native declaration : line 283</i>
     */
    void libvlc_set_user_agent(PointerByReference p_instance, String name, String http);
